--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Rubik';
-  src: url(./../../public/fonts/Rubik-Regular.ttf) format(truetype);
+  src: url(./../../public/fonts/Rubik-Regular.woff2) format(woff2);
   font-style: normal;
   font-weight: 400;
   font-display: swap;
@@ -12,37 +12,17 @@
 
 @font-face {
   font-family: 'Rubik';
-  src: url(./../../public/fonts/Rubik-Medium.ttf) format(truetype);
+  src: url(./../../public/fonts/Rubik-Medium.woff2) format(woff2);
   font-style: normal;
   font-weight: 500;
   font-display: swap;
 }
 
-/*? OpenSans Regular */
+/*? Rubik Bold */
 
 @font-face {
-  font-family: 'OpenSans';
-  src: url(./../../public/fonts/OpenSans-Regular.ttf) format(truetype);
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-}
-
-/*? OpenSans SemiBold */
-
-@font-face {
-  font-family: 'OpenSans';
-  src: url(./../../public/fonts/OpenSans-SemiBold.ttf) format(truetype);
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-}
-
-/*? OpenSans Bold */
-
-@font-face {
-  font-family: 'OpenSans';
-  src: url(./../../public/fonts/OpenSans-Bold.ttf) format(truetype);
+  font-family: 'Rubik';
+  src: url(./../../public/fonts/Rubik-Bold.woff2) format(woff2);
   font-style: normal;
   font-weight: 700;
   font-display: swap;
